# linkedInPostAgent

./: .gitignore  README.md  main.py  pyproject.toml  z.py
notebook/: research.ipynb  testing.ipynb
src/shantabaiagent/config/: settings.py
src/shantabaiagent/models/: schemas.py
src/shantabaiagent/services/linkedin/: poster.py  utils.py
src/shantabaiagent/services/llm/: agent.py  tools.py
src/shantabaiagent/utils/: helpers.py
